--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -80,7 +80,7 @@
     <string name="widget_location">Widget Location</string>
     <string name="widget_size">Widget Size</string>
     <string name="cancel">בטל</string>
-    <string name="contact_us_text"> Phone no:- 1111111111 \n Email:- dts@dts.com</string>
+    <string name="contact_us_text"> Phone no:- 1111111111 \n Email:- keeptoo@keeptoo.com</string>
     <string name="select_image_warning">plaese select atleast one image to share</string>
     <string name="restore_images">שחזור מדיה</string>
     <string name="image_indication_text"> מתוך %1$s %2$d </string>
