--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -105,4 +105,11 @@
     <string name="sortby2w">סדר לפי שבועיים&#160;&#160;&#160;&#160;&#160;</string>
     <string name="sortby1m">סדר לפי חודש&#160;&#160;&#160;&#160;&#160;</string>
 
+
+
+
+    <string name="new_folder">New Folder</string>
+
+
+
 </resources>
