--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,5 +170,6 @@
     <string name="sortby1m1">&#160;&#160;&#160;&#160;&#160;sort by 1 mo</string>
 
 
+    <string name="new_folder">New Folder</string>
 
 </resources>
